# Vana

./: .gitignore  ANDROID_SIGNING_SETUP.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
.augment/rules/: Architechture.md  CodingStandards.md  CoreRules.md  Interaction.md  Security.md
.github/workflows/: build-dev.yml  release.yml  version-check.yml
docs/: CHANGELOG.md  DEPLOYMENT.md  DEVELOPMENT.md  Git命令迁移状态.md  Sync Protocol.md  VERSIONING.md  reference.txt  产品需求文档 (PRD)_ Project_ No Visitors (游客止步).md  项目状态报告.md
scripts/: README.md  check-build-ready.sh  configure-android-signing.py  configure-android-signing.sh  quick-test-signing.sh  test-android-signing.sh  wait-for-nextjs.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: create_icon.sh  generate-icons.sh  icon.icns
src-tauri/src/: commands.rs  crypto.rs  git.rs  keychain.rs  lib.rs  main.rs  storage.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AtmospherePreviewModal.tsx  BlockRenderer.tsx  BlockTypeSelector.tsx  Breadcrumb.tsx  ConflictModal.tsx  ContextMenu.tsx  Editor.tsx  InputModal.tsx  LoadingOverlay.tsx  Modal.tsx  QRCodeDisplay.tsx  QRCodeScanner.tsx  RadialMenu.tsx  SearchModal.tsx  Sidebar.tsx  Skeleton.tsx  ThemeProvider.tsx  ThemeSelectorModal.tsx  TitleBar.tsx  Toast.tsx  ToastProvider.tsx
src/lib/: api.ts  atmosphere.ts  cache.ts  editor-converter.ts  editor-shortcuts.ts  export.ts  fileCache.ts  fileNameUtils.ts  fileValidator.ts  migrate-legacy-files.ts  platform.ts  (+6 more)
(+2 files in other folders)
