[package]
name = "vana"
version = "0.5.2"
edition = "2021"

[lib]
name = "vana"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Tauri v2 核心依赖
tauri = { version = "2.0.0", features = [] }
tauri-plugin-store = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 加密相关
aes-gcm = "0.10"
rand = "0.8"
base64 = { version = "0.22", default-features = false, features = ["alloc", "std"] }

# Git 操作
git2 = { version = "0.18", features = ["https", "ssh", "vendored-openssl"] }
walkdir = "2.5"
chrono = "0.4"

# 文件系统操作
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

